# rust-wasm-vs-native

./: Cargo.toml  Dockerfile-native  Dockerfile-wasm
src/: main.rs
